[gd_scene load_steps=12 format=3 uid="uid://bw5y0evbtor4o"]

[ext_resource type="Script" path="res://scenes/Microgames/hotdogcontest/hot_dog_eater.gd" id="1_kbsyw"]
[ext_resource type="Texture2D" uid="uid://bbcfi28ul4ugf" path="res://assets/images/HotDogStuff/HDBackground.png" id="1_ry1ou"]
[ext_resource type="Texture2D" uid="uid://drs0cdaik2xqg" path="res://assets/images/controller/button_xbox_dpad_dark_1.png" id="2_2oyl7"]
[ext_resource type="Texture2D" uid="uid://cd1lp5suhgovf" path="res://assets/images/HotDogStuff/HotDogMan.png" id="2_dd6yo"]
[ext_resource type="PackedScene" uid="uid://c54of5w13vi05" path="res://scenes/Microgames/hotdogcontest/HotDogArmScene.tscn" id="2_yb573"]
[ext_resource type="Texture2D" uid="uid://d174tpn7td2b0" path="res://assets/images/HotDogStuff/HDTopLayer.png" id="3_gh552"]
[ext_resource type="Texture2D" uid="uid://irbhbm57pttb" path="res://assets/images/controller/button_xbox_digital_a_5.png" id="7_rn246"]

[sub_resource type="AtlasTexture" id="AtlasTexture_ea3uk"]
atlas = ExtResource("2_dd6yo")
region = Rect2(0, 0, 360, 278)

[sub_resource type="AtlasTexture" id="AtlasTexture_co8sn"]
atlas = ExtResource("2_dd6yo")
region = Rect2(360, 0, 360, 278)

[sub_resource type="AtlasTexture" id="AtlasTexture_fda6v"]
atlas = ExtResource("2_dd6yo")
region = Rect2(720, 0, 360, 278)

[sub_resource type="SpriteFrames" id="SpriteFrames_y1r1w"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_ea3uk")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_co8sn")
}, {
"duration": 3.0,
"texture": SubResource("AtlasTexture_fda6v")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_co8sn")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ea3uk")
}],
"loop": false,
"name": &"default",
"speed": 20.0
}]

[node name="HotDogEater2" type="Node2D"]
position = Vector2(980, 540)
script = ExtResource("1_kbsyw")

[node name="ButtonXboxDpadDark1" type="Sprite2D" parent="."]
z_index = 100
position = Vector2(-101, -459)
scale = Vector2(0.30625, 0.29375)
texture = ExtResource("2_2oyl7")

[node name="Background" type="Sprite2D" parent="."]
texture = ExtResource("1_ry1ou")

[node name="PlayerNumber" type="Label" parent="."]
offset_left = -366.0
offset_top = -335.0
offset_right = -174.0
offset_bottom = -182.0
theme_override_colors/font_color = Color(0.91, 0.273, 0.283617, 1)
theme_override_colors/font_outline_color = Color(0.45098, 0.027451, 0.0352941, 1)
theme_override_constants/outline_size = 20
theme_override_font_sizes/font_size = 112
text = "0
"
horizontal_alignment = 1

[node name="DogEaterNumber" type="Label" parent="."]
offset_left = 194.0
offset_top = -325.0
offset_right = 386.0
offset_bottom = -172.0
theme_override_colors/font_color = Color(0.352, 0.5104, 0.88, 1)
theme_override_colors/font_outline_color = Color(0.0666667, 0.215686, 0.568627, 1)
theme_override_constants/outline_size = 20
theme_override_font_sizes/font_size = 112
text = "3
"
horizontal_alignment = 1

[node name="HotDogArmScene" parent="." instance=ExtResource("2_yb573")]
position = Vector2(-212, 50)

[node name="HotDogMan" type="AnimatedSprite2D" parent="."]
position = Vector2(-634, 36)
sprite_frames = SubResource("SpriteFrames_y1r1w")
frame = 4
frame_progress = 1.0
offset = Vector2(400, 0)

[node name="TopLayer" type="Sprite2D" parent="."]
z_index = 5
texture = ExtResource("3_gh552")

[node name="Timer" type="Timer" parent="."]
wait_time = 7.0
one_shot = true

[node name="WinGameTimer" type="Timer" parent="."]
wait_time = 0.5
one_shot = true

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]
position = Vector2(-540, -540)

[node name="ButtonXboxDigitalA5" type="Sprite2D" parent="."]
position = Vector2(86, -449)
scale = Vector2(0.283773, 0.295651)
texture = ExtResource("7_rn246")

[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
[connection signal="timeout" from="WinGameTimer" to="." method="_on_win_game_timer_timeout"]
